# libblur

./: Cargo.toml
src/: fast_gaussian.rs  fast_gaussian_next.rs  lib.rs  to_storage.rs
src/box_filter/: box_blur.rs
src/filter1d/: filter_1d_column_handler.rs  filter_1d_row_handler.rs
src/filter2d/: filter_2d_handler.rs
src/gaussian/: declaration.rs
src/neon/: f16_utils.rs  fast_gaussian_f16.rs  fast_gaussian_next_f16.rs  utils.rs
src/sse/: fast_gaussian_f16.rs  fast_gaussian_next_f16.rs  utils.rs
src/stackblur/: stack_blur_f16.rs
src/stackblur/neon/: horizontal_f16.rs  vertical_f16.rs
src/stackblur/sse/: horizontal_f16.rs  vertical_f16.rs
