workspace = { members = ["fuzz", "app/accelerate", "app"] }

[package]
name = "libblur"
version = "0.19.4"
edition = "2021"
description = "Fast image blurring in pure Rust"
readme = "./README.md"
keywords = ["blur", "gauss_blur", "image_blur", "fast_blur", "stack_blur"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/libblur"
categories = ["multimedia::images", "multimedia::video", "algorithms"]
homepage = "https://github.com/awxkee/libblur"
repository = "https://github.com/awxkee/libblur.git"
exclude = ["*.jpg", "./assets/*", "*.png"]
rust-version = "1.82.0"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "libblur"
path = "src/lib.rs"

[features]
default = ["avx", "sse", "rdm", "neon"]
image = ["dep:image"]
fft = ["dep:rustfft", "dep:fast_transpose"]
# Enables NEON RDM intrinsics
rdm = ["neon"]
# Enables AVX-512. Requires nightly on rust compiler before 1.89.
nightly_avx512 = []
# Enables NEON fcma, used in FFT and filter 1d complex. Requires `nightly`.
nightly_fcma = []
# Enables `f16`. Requires `nightly` toolchain.
nightly_f16 = []
# Enables AVX intrinsics
avx = []
# Enables SSE4.1 intrinsics
sse = []
# Enables NEON intrinsics
neon = []

[dependencies]
fast_transpose = { version = "0.2", optional = true }
image = { version = "0.25", optional = true, default-features = false }
novtb = "^0.1.6"
num-complex = { version = "0.4", default-features = false }
num-traits = "0.2"
rayon = "1"
rustfft = { version = "6", optional = true }

[patch.crates-io]
num-traits = { git = "https://github.com/virtualritz/num-traits.git" }

[profile.profiling]
inherits = "release"
debug = true
